RESOLVED FIXED131436
[CSS Blending] Changing isolation CSS property should not trigger repaint in RenderStyle::changeRequiresLayerRepaint
https://bugs.webkit.org/show_bug.cgi?id=131436
Summary [CSS Blending] Changing isolation CSS property should not trigger repaint in ...
Ion Rosca
Reported 2014-04-09 06:36:38 PDT
Changing isolation CSS property should not trigger repaint in RenderStyle::changeRequiresLayerRepaint. This is not necessary because this property will possibly change if the layer is stacking context or not. And this stacking context state will trigger repaint if required.
Attachments
Patch (7.28 KB, patch)
2014-05-05 06:55 PDT, Ion Rosca
no flags
Patch (7.46 KB, patch)
2014-05-06 07:29 PDT, Ion Rosca
no flags
Ion Rosca
Comment 1 2014-05-05 06:55:52 PDT
Ion Rosca
Comment 2 2014-05-06 07:29:13 PDT
Dirk Schulze
Comment 3 2014-05-08 00:42:23 PDT
Comment on attachment 230906 [details] Patch r=me
WebKit Commit Bot
Comment 4 2014-05-08 01:17:03 PDT
Comment on attachment 230906 [details] Patch Clearing flags on attachment: 230906 Committed r168465: <http://trac.webkit.org/changeset/168465>
WebKit Commit Bot
Comment 5 2014-05-08 01:17:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.