[CSS Blending] Changing isolation CSS property should not trigger repaint in RenderStyle::changeRequiresLayerRepaint https://bugs.webkit.org/show_bug.cgi?id=131436

Patch by Ion Rosca <rosca@adobe.com> on 2014-05-08
Reviewed by Dirk Schulze.

Source/WebCore:
The isolation:isolate property will create a stacking context. This is done in
StyleResolver::adjustRenderStyle where z-index is forced to 0.
If the element is already a stacking context for any other reason,
changing the isolation flag should not have any effect.

Tests: css3/blending/repaint/blend-mode-turn-off-isolation-no-effect.html
       css3/blending/repaint/blend-mode-turn-off-isolation.html

* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::changeRequiresLayerRepaint):
do not request repaint if isolation has changed.

LayoutTests:
* css3/blending/repaint/blend-mode-turn-off-isolation-expected.txt: Added.
* css3/blending/repaint/blend-mode-turn-off-isolation-no-effect-expected.txt: Added.
* css3/blending/repaint/blend-mode-turn-off-isolation-no-effect.html: Added.
* css3/blending/repaint/blend-mode-turn-off-isolation.html: Added.

Canonical link: https://commits.webkit.org/150727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168465 268f45cc-cd09-0410-ab3c-d52691b4dbfc