Source/WebCore/rendering/style/RenderStyle.cpp
@@ -663,9 +663,6 @@ bool RenderStyle::changeRequiresLayerRepaint(const RenderStyle* other, unsigned&
 #if ENABLE(CSS_COMPOSITING)
     if (rareNonInheritedData->m_effectiveBlendMode != other->rareNonInheritedData->m_effectiveBlendMode)
         return true;
-
-    if (rareNonInheritedData->m_isolation != other->rareNonInheritedData->m_isolation)
-        return true;
 #endif
 
     if (rareNonInheritedData->opacity != other->rareNonInheritedData->opacity) {
